# nesta-job-analysis

./: .gitignore  Pipfile  README.md  README.rst  run_analysis.py  setup.cfg  setup.py
src/: lda.py  postprocessing.py  preprocessing.py  processing_similiar_subjects.py  word_to_vec.py
visualisation/: Class_Book.pde  Class_Highlighted.pde  Class_Words.pde  Functions.pde  controls.pde  draw.pde  keys.pde  visualisation.pde
visualisation/data/: Lato-Black-40.vlw  Lato-Light-40.vlw  lda_10_topics.csv  lookupTable-circles.csv  occupations_lda_10_topics.csv  processed_only_job_title_occupation.csv  word_2_vec_trained_occupations.csv
