[metadata]
name = nesta_job_analysis
author = Christina Last
author_email = christina.last@outlook.com
description = Behold My Awesome Project!
long_description = README.rst
classifier =
    Operating System :: OS Independent
    Programming Language :: Python

license = MIT
keywords =
    setup
    distutils

[pylama]
max-line-length = 100
exclude = .tox,.git,*/static/CACHE/*,docs
skip = */.tox/*,*/.venv/*,/*,*/static/CACHE/*,docs,manage.py,wsgi.py,*/settings/*,/.site-packages/

# https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
[pylama:pycodestyle]
ignore = W504,E133,W605,D203,D212,D213,D404,W605,E203,E266,E501,W503,F403,F401,E402


[files]
packages = nesta_job_analysis


[mypy]
ignore_missing_imports=True
no_implicit_optional=True
check_untyped_defs=True
strict_equality=True
warn_redundant_casts = True
warn_unused_ignores = True

[isort]
multi_line_output = 3
include_trailing_comma = True
combine_as_imports = True
line_length = 100
skip_glob = env
known_third_party =click,gensim,joblib,loguru,nltk,numpy,pandas,setuptools,sklearn
skip=setup.py
